--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typed-event-emitter",
+  "name": "typed-events",
   "version": "1.0.0",
   "description": "A typed event emitter for Node.js",
   "main": "./dist/index.cjs",
