--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ts-event-emitter",
-  "version": "1.0.0",
+  "name": "typescript-event-emitter",
+  "version": "1.0.1",
   "description": "A typed event emitter for Node.js",
   "main": "./dist/index.cjs",
   "module": "./dist/index.modern.js",
   "unpkg": "./dist/index.umd.js",
-  "repository": "https://github.com/adevinwild/typed-event-emitter",
+  "repository": "https://github.com/adevinwild/ts-event-emitter",
   "author": "adevinwild",
   "license": "MIT",
   "source": "src/index.ts",
