chore: :wrench: Added keywords to the package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "files": [
     "dist"
   ],
+  "keywords": [
+    "event",
+    "emitter",
+    "node",
+    "typescript",
+    "typed"
+  ],
   "main": "./dist/index.js",
   "repository": "https://github.com/adevinwild/typescript-event-emitter",
   "author": "adevinwild",
